--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" class="h-full w-full">
+<html lang="en" class="w-full h-full">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="h-full w-full">
-		<div style="display: contents" class="h-full w-full">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" class="min-w-full min-h-full">
+		<div style="display: contents" class="min-w-full min-h-full">%sveltekit.body%</div>
 	</body>
 </html>
